--- a/exercises-05/notebooks/cheese.ipynb
+++ b/exercises-05/notebooks/cheese.ipynb
@@ -18,16 +18,7 @@
     "plt.rcParams.update({'font.size': 16})\n",
     "from sklearn.linear_model import LinearRegression\n",
     "import warnings\n",
-    "warnings.filterwarnings('ignore')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "id": "6255235f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "warnings.filterwarnings('ignore')\n",
     "from scipy.stats import multivariate_normal\n",
     "from tqdm import tqdm"
    ]
@@ -250,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 167,
-   "id": "c459228d",
+   "id": "059b37fd",
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 171,
-   "id": "f0e42daa",
+   "id": "e9dd10ca",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 169,
-   "id": "0099d054",
+   "id": "9da857c7",
    "metadata": {},
    "outputs": [
     {
@@ -337,14 +328,6 @@
     "    if store == 0:\n",
     "        plt.legend(bbox_to_anchor=(8.5,1.5),ncol=2)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "48c80f9e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
