Updates from Overleaf

--- a/exercises-01/ex1.tex
+++ b/exercises-01/ex1.tex
@@ -140,7 +140,7 @@ $$P(\theta|x_1, ...,x_n) \propto P(x_1, ...,x_n|\theta, \sigma^2) P(\theta)$$\\
 $$P(\theta|x_1, ...,x_n) \propto \left(\frac{1}{\sigma \sqrt{2\pi }}\right)^n \exp\left(-\frac{1}{2\sigma^2}n\bar{x^2} - 2n\bar{x}\theta +n\theta^2\right)\frac{1}{v \sqrt{2\pi }}  \exp\left[-\frac{1}{2}\left(\frac{x-m}{v}\right)^2\right]$$\\
 
 
-We can drop the terms outside the exponentials and re-arrange:
+We can drop the terms outside the exponential and re-arrange:
 
 $$P(\theta|x_1, ...,x_n) \propto  \exp\left[-\frac{1}{2}\left(\frac{n\bar{x^2}+2n\bar{x}\theta+n\theta^2}{\sigma^2} + \frac{\theta^2-2m\theta+m^2}{v}\right)\right] $$\\
 
