Updates from Overleaf

--- a/project/writeup/report.tex
+++ b/project/writeup/report.tex
@@ -93,6 +93,13 @@ An incident baseline was calculated from the 2019 NFORS data and applied to the 
 As expected, the various mobility types were highly correlated. Figure \ref{corr_mat} shows the correlation matrix for the mobility types.
 
 
+\begin{figure}[h]
+\caption{Example of a parametric plot ($\sin (x), \cos(x), x$)}
+\centering
+\includegraphics[width=0.5\textwidth]{corr.png}
+\end{figure}
+
+
 
 \section{Model}
 \section{Results}
