--- a/project/writeup/report.tex
+++ b/project/writeup/report.tex
@@ -110,7 +110,7 @@ Where $i$ is the fire department, $X_i$ is the design matrix including an interc
     
 \begin{figure}[h]\label{corr_mat}
 \centering
-\includegraphics[width=.7\textwidth]{corr.png}
+\includegraphics[width=.2\textwidth]{project/notebooks/normal_approx.png}
 \caption{Correlation Matrix}
 \end{figure}
 
