Updates from Overleaf

--- a/project/writeup/report.tex
+++ b/project/writeup/report.tex
@@ -110,8 +110,8 @@ Where $i$ is the fire department, $X_i$ is the design matrix including an interc
     
 \begin{figure}[h]\label{corr_mat}
 \centering
-\includegraphics[width=.4\textwidth]{normal_approx.png}
-\caption{Correlation Matrix}
+\includegraphics[width=.35\textwidth]{normal_approx_1.png}
+\caption{Plots showing residuals with fitted normal with same moments (left), Q-Q plot (middle), residuals against time (right). Only the first 14 departments are shown.}
 \end{figure}
 
 
