Updates from Overleaf

--- a/project/writeup/report.tex
+++ b/project/writeup/report.tex
@@ -117,6 +117,12 @@ Another concern was that the residuals (as plotted in Figure \ref{normal} - alth
 \end{figure}
 
 
+\begin{figure}[h]\label{corr_mat}
+\centering
+\includegraphics[width=1\textwidth]{acf_plots.png}
+\caption{ACF plots for all departments.}
+\end{figure}
+
 \section{Model}
 \section{Results}
 
