Updates from Overleaf

--- a/project/writeup/report.tex
+++ b/project/writeup/report.tex
@@ -201,7 +201,11 @@ After some trial and error, $\sigma'$ was set to 0.1 for both $b$ and $\tau_^2$.
 
 \section{Results}
 
-
+\begin{figure}[h]\label{autocorr_after}
+\centering
+\includegraphics[width=1\textwidth]{acf_plots_after.png}
+\caption{ACF plots for all departments.}
+\end{figure}
 
 
 
